--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "dev-master"
+    "oxid-esales/oxideshop-metapackage-ce": "dev-b-6.0-beta"
   },
   "config": {
     "preferred-install": {
