Use tag v6.0-beta.1 instead of branch dev-6.0-beta

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "dev-b-6.0-beta"
+    "oxid-esales/oxideshop-metapackage-ce": "v6.0-beta.1"
   },
   "config": {
     "preferred-install": {
