Use version tag v6.0-beta.1 instead of branch dev-b-6.0-beta

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-ee": "dev-b-6.0-beta"
+    "oxid-esales/oxideshop-metapackage-ee": "v6.0-beta.1"
   },
   "config": {
     "preferred-install": {
