Update to use latest V6 beta version

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "v6.0-beta.1"
+    "oxid-esales/oxideshop-metapackage-ce": "^v6.0-beta.2"
   },
   "scripts": {
     "oe:migration:run": "oe-eshop-facts oe-eshop-db_migrate",
