--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-pe": "^v6.0.0"
+    "oxid-esales/oxideshop-metapackage-pe": "^v6.0.1"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v3.2.0",
+    "oxid-esales/testing-library": "^v4.0.0-beta.1",
     "oxid-esales/coding-standards": "^v3.0.3",
     "incenteev/composer-parameter-handler": "~v2.0",
     "oxid-esales/oxideshop-ide-helper": "^v3.0.0",
