--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-pe": "^v6.0.1"
+    "oxid-esales/oxideshop-metapackage-pe": "v6.0.1"
   },
   "require-dev": {
     "oxid-esales/testing-library": "^v4.0.0-beta.1",
