--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "GPL-3.0-only",
     "proprietary"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "beta",
   "repositories": [
     {
       "type": "composer",
@@ -14,12 +14,11 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-ee": "v6.1.4"
+    "oxid-esales/oxideshop-metapackage-ee": "v6.2.0-beta.1"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v5.0.4",
-    "oxid-esales/coding-standards": "^v3.0.5",
-    "incenteev/composer-parameter-handler": "~v2.0",
+    "oxid-esales/testing-library": "^v6.0.0",
+    "incenteev/composer-parameter-handler": "^v2.0.0",
     "oxid-esales/oxideshop-ide-helper": "^v3.1.2",
     "oxid-esales/azure-theme": "^v1.4.2"
   },
