--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
   "license": [
     "GPL-3.0-only"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
     "oxid-esales/oxideshop-metapackage-ce": "v6.2.0-beta.1"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v6.0.0",
+    "oxid-esales/testing-library": "dev-b-6.x",
     "incenteev/composer-parameter-handler": "^v2.0.0",
     "oxid-esales/oxideshop-ide-helper": "^v3.1.2",
     "oxid-esales/azure-theme": "^v1.4.2"
