--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-ee": "v6.2.0-beta.1"
+    "oxid-esales/oxideshop-metapackage-ee": "v6.2.0-rc.1"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "dev-b-6.x",
+    "oxid-esales/testing-library": "^v7.0.1",
     "incenteev/composer-parameter-handler": "^v2.0.0",
     "oxid-esales/oxideshop-ide-helper": "^v3.1.2",
     "oxid-esales/azure-theme": "^v1.4.2"
