--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": [
     "GPL-3.0-only"
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "RC",
   "require": {
     "oxid-esales/oxideshop-metapackage-ce": "v6.2.0-rc.1"
   },
