--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   ],
   "minimum-stability": "RC",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "v6.2.0-rc.2"
+    "oxid-esales/oxideshop-metapackage-ce": "v6.2.0"
   },
   "require-dev": {
     "oxid-esales/testing-library": "^v7.1.0",
