--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-ee": "v6.2.0-rc.2"
+    "oxid-esales/oxideshop-metapackage-ee": "v6.2.0"
   },
   "require-dev": {
     "oxid-esales/testing-library": "^v7.1.0",
