--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
   "license": [
     "GPL-3.0-only"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "v6.2.2"
+    "oxid-esales/oxideshop-metapackage-ce": "dev-master"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v7.1.1",
-    "incenteev/composer-parameter-handler": "^v2.0.0",
-    "oxid-esales/oxideshop-ide-helper": "^v3.1.2",
+    "oxid-esales/testing-library": "dev-master",
+    "incenteev/composer-parameter-handler": "dev-master",
+    "oxid-esales/oxideshop-ide-helper": "dev-master",
     "oxid-esales/azure-theme": "^v1.4.2"
   },
   "autoload-dev": {
