--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "dev-b-6.3"
+    "oxid-esales/oxideshop-metapackage-ce": "v6.3.0"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v7.1.1",
+    "oxid-esales/testing-library": "^v8.0.0",
     "incenteev/composer-parameter-handler": "^v2.0.0",
-    "oxid-esales/oxideshop-ide-helper": "dev-b-6.3.x",
+    "oxid-esales/oxideshop-ide-helper": "^v4.1.0",
     "oxid-esales/azure-theme": "^v1.4.2"
   },
   "autoload-dev": {
