--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
   "license": [
     "GPL-3.0-only"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "v6.3.0"
+    "oxid-esales/oxideshop-metapackage-ce": "v7.0.0-rc1"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v8.0.0",
-    "incenteev/composer-parameter-handler": "^v2.0.0",
-    "oxid-esales/oxideshop-ide-helper": "^v4.1.0",
-    "oxid-esales/azure-theme": "^v1.4.2"
+    "oxid-esales/testing-library": "^v9.0.0",
+    "incenteev/composer-parameter-handler": "^v2.1.0",
+    "oxid-esales/oxideshop-ide-helper": "^v5.0.0",
+    "oxid-esales/azure-theme": "^v2.0.0"
   },
   "autoload-dev": {
     "psr-4": {
