--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "GPL-3.0-only",
     "proprietary"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "repositories": [
     {
       "type": "composer",
@@ -14,13 +14,13 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-ee": "v6.3.0"
+    "oxid-esales/oxideshop-metapackage-ee": "v7.0.0-rc1"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v8.0.0",
-    "incenteev/composer-parameter-handler": "^v2.0.0",
-    "oxid-esales/oxideshop-ide-helper": "^v4.1.0",
-    "oxid-esales/azure-theme": "^v1.4.2"
+    "oxid-esales/testing-library": "^v9.0.0",
+    "incenteev/composer-parameter-handler": "^v2.1.0",
+    "oxid-esales/oxideshop-ide-helper": "^v5.0.0",
+    "oxid-esales/azure-theme": "^v2.0.0"
   },
   "autoload-dev": {
     "psr-4": {
