--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "v7.0.0-rc1"
+    "oxid-esales/oxideshop-metapackage-ce": "v7.0.0-rc.1"
   },
   "require-dev": {
     "oxid-esales/testing-library": "^v9.0.0",
