--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-pe": "v7.0.0-rc1"
+    "oxid-esales/oxideshop-metapackage-pe": "v7.0.0-rc.1"
   },
   "require-dev": {
     "oxid-esales/testing-library": "^v9.0.0",
