--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": [
     "GPL-3.0-only"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
     "oxid-esales/oxideshop-metapackage-ce": "dev-b-6.4"
   },
