--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "GPL-3.0-only",
     "proprietary"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "repositories": [
     {
       "type": "composer",
@@ -14,7 +14,7 @@
     }
   ],
   "require": {
-    "oxid-esales/oxideshop-metapackage-pe": "v6.3.1"
+    "oxid-esales/oxideshop-metapackage-pe": "dev-b-6.4"
   },
   "require-dev": {
     "oxid-esales/testing-library": "^v8.0.2",
