--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,10 @@
   "config": {
     "preferred-install": {
       "*": "dist"
+    },
+    "allow-plugins": {
+      "oxid-esales/oxideshop-composer-plugin": true,
+      "oxid-esales/oxideshop-unified-namespace-generator": true
     }
   },
   "extra": {
