--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "project",
   "description": "This file should be used as an OXID eShop project root composer.json file. Entries provided here intended to be examples and could be changed to your specific needs.",
   "license": [
-    "GPL-3.0-only"
+    "proprietary"
   ],
   "minimum-stability": "dev",
   "require": {
