--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
   "license": [
     "proprietary"
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "dev-b-6.5"
+    "oxid-esales/oxideshop-metapackage-ce": "v6.5.0"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "dev-b-6.5.x",
+    "oxid-esales/testing-library": "^v8.2.0",
     "incenteev/composer-parameter-handler": "^v2.0.0",
-    "oxid-esales/oxideshop-ide-helper": "dev-b-6.5.x",
+    "oxid-esales/oxideshop-ide-helper": "^4.2.0",
     "oxid-esales/azure-theme": "^v1.4.2"
   },
   "autoload-dev": {
