--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "oxid-esales/oxideshop-metapackage-ce": "dev-b-7.0"
   },
   "require-dev": {
-    "oxid-esales/testing-library": "^v9.0.0",
+    "oxid-esales/testing-library": "dev-b-7.0.x",
     "incenteev/composer-parameter-handler": "^v2.1.0",
     "oxid-esales/oxideshop-ide-helper": "^v5.0.0",
     "oxid-esales/azure-theme": "dev-master"
