--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,7 @@
   "name": "oxid-esales/oxideshop-project",
   "type": "project",
   "description": "This file should be used as an OXID eShop project root composer.json file. Entries provided here intended to be examples and could be changed to your specific needs.",
-  "license": [
-    "GPL-3.0-only",
-    "proprietary"
-  ],
+  "license": "proprietary",
   "minimum-stability": "dev",
   "repositories": [
     {
@@ -16,29 +13,10 @@
   "require": {
     "oxid-esales/oxideshop-metapackage-ee": "v7.0.0-rc.1"
   },
-  "require-dev": {
-    "oxid-esales/testing-library": "^v9.0.0",
-    "incenteev/composer-parameter-handler": "^v2.1.0",
-    "oxid-esales/oxideshop-ide-helper": "^v5.0.0",
-    "oxid-esales/azure-theme": "^v2.0.0"
-  },
   "autoload-dev": {
     "psr-4": {
       "OxidEsales\\EshopCommunity\\Tests\\": "./vendor/oxid-esales/oxideshop-ce/tests"
     }
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-      "@oe:ide-helper:generate"
-    ],
-    "post-update-cmd": [
-      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-      "@oe:ide-helper:generate"
-    ],
-    "oe:ide-helper:generate": [
-      "if [ -f ./vendor/bin/oe-eshop-ide_helper ]; then oe-eshop-ide_helper; fi"
-    ]
   },
   "config": {
     "preferred-install": {
@@ -47,18 +25,6 @@
     "allow-plugins": {
       "oxid-esales/oxideshop-composer-plugin": true,
       "oxid-esales/oxideshop-unified-namespace-generator": true
-    }
-  },
-  "extra": {
-    "incenteev-parameters": {
-      "file": "test_config.yml",
-      "dist-file": "vendor/oxid-esales/testing-library/test_config.yml.dist",
-      "parameter-key": "mandatory_parameters",
-      "env-map": {
-        "shop_path": "SHOP_PATH",
-        "shop_tests_path": "SHOP_TESTS_PATH",
-        "partial_module_paths": "PARTIAL_MODULE_PATHS"
-      }
     }
   }
 }
