--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "proprietary",
   "minimum-stability": "dev",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "v7.0.0-rc.1"
+    "oxid-esales/oxideshop-metapackage-ce": "dev-b-7.0"
   },
   "autoload-dev": {
     "psr-4": {
