--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "type": "project",
   "description": "This file should be used as an OXID eShop project root composer.json file. Entries provided here intended to be examples and could be changed to your specific needs.",
   "license": "proprietary",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
-    "oxid-esales/oxideshop-metapackage-ce": "dev-b-7.0"
+    "oxid-esales/oxideshop-metapackage-ce": "v7.0.0"
   },
   "autoload-dev": {
     "psr-4": {
